--- a/to-do-app-project/src/App.css
+++ b/to-do-app-project/src/App.css
@@ -5,7 +5,6 @@ justify-content: center;
 
 .App-header .hero_box {
   margin: 0 auto;
-  margin-top: 100px;  
 }
 
 
@@ -14,9 +13,8 @@ justify-content: center;
   border-style: solid;
   border-width: 1px;
   border-color: lightblue;
-  width: 300px;
-  height: 300px;
-  margin-top: 100px;
+  width: 100%;
+  height: 100%;
  
 
 }
@@ -35,14 +33,13 @@ justify-content: center;
 .title_sub {
   font-size: 30px;
   text-align: center;
-  margin-top: 60px;
 }
 
 .title_section {
   border-style: solid; 
   border-width: 1px;
-  width: 346px;
-  height: 200px;
+  width: 100%;
+  height: 100%;
   background-image: url("./Images/1.jpg");
   background-size: contain;
   
@@ -70,10 +67,31 @@ justify-content: center;
 
 .topbar {
   background-color: lightblue;
-  width: 100%;
+  display: flex;
+
 }
 
 .topbar .icon_two {
-position: relative;
-left: 300px;
+
+
 }
+.avatar{
+  
+  width: 150px;
+  margin: 0 auto;
+ 
+}
+
+.avatar_parent{
+  display:flex;
+justify-content: center;
+  
+}
+
+
+
+.name{
+  display:flex;
+  justify-content: center;
+}
+
