--- a/to-do-app-project/src/App.css
+++ b/to-do-app-project/src/App.css
@@ -1,41 +1,112 @@
 @font-face {
-  font-family: "yo";
-  src: url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300&display=swap")
+  font-family: yo;
+  src: url(https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300&display=swap)
 }
 
-body { 
-display:flex;
-justify-content: center;
+.App-header {
+  margin: 0;
 }
 
-.App-header .hero_box {
-  margin: 0 auto;
-}
 
 body {
-  background-image: url("https://i.pinimg.com/originals/b0/ff/1a/b0ff1a3520386aacce5cbad2986edc89.jpg");
-  background-size: 100%;
+  display: flex;
+  justify-content: center;
+  /* background-image: url("https://i.pinimg.com/originals/b0/ff/1a/b0ff1a3520386aacce5cbad2986edc89.jpg"); */
+  background-color: #4e4f52;;
+  background-image: url("https://www.transparenttextures.com/patterns/diagmonds.png");
+}
+
+#root {
+  width: 70%;
+  max-width: 700px;
 }
 
 
 .background {
-text-align: center
-;}
+  text-align: center;
+}
+
+.title {
+  color: white;
+  font-family: cursive;
+  margin-top: 0;
+}
+
+.title_time {
+  color: white;
+  font-Family: cursive;
+}
+
+.title_sub {
+  font-size: 30px;
+  text-align: center;
+  color: white;
+}
+
+.title_section {
+  border-style: solid;
+  border-Width: 1px;
+  width: 100%;
+  height: 100%;
+  background-Image: url("https://i.pinimg.com/originals/47/c9/ba/47c9ba1fbde311e4646fdda4ea439bd2.jpg");
+  background-Size: 100%;
+  background-repeat: no-repeat;
+}  
+
+input {
+  display: flex;
+  justify-content: center;
+}
+
+.input_box {
+  margin-top: 5px;
+  height: 100px;
+}
+
+.submit {
+  display: flex;
+  margin: 0 auto;
+  margin-top:5px;
+}
+
+
+.name {
+  margin-top: 10px;
+}
+
+.topbar {
+  background-Color: lightblue;
+
+  display: flex
+}
+
+
+.avatar {
+  width: 150px;
+  margin: 0 auto;
+  background-Color: white;
+ 
+}
+
+.avatar_parent {
+  display:flex;
+ justify-Content: center;
+}
 
 
 
+.name {
+  display:flex;
+  justify-Content: center;
+  color: white;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.hero_box {
+  border-Style: solid;
+  border-Width: 1px;
+  border-Color: lightblue;
+  width: 100%;
+  height: 100%; 
+  background-Color: lightBlue;
+  border-radius: 3px;
+}
